changed some text to make the address bars more yser friendly

--- a/MapAppProject/OtterProductions_CapstoneProject/OtterProductions_CapstoneProject/Views/Home/Index.cshtml
+++ b/MapAppProject/OtterProductions_CapstoneProject/OtterProductions_CapstoneProject/Views/Home/Index.cshtml
@@ -23,7 +23,7 @@
                 
             <div class="input-group-text">
 
-                <label asp-for="location" class="control-label" >Address</label>
+                <label asp-for="location" class="control-label" >Address or City</label>
                 <input asp-for="location" class="form-control" id="address" required />
                 <button type="submit" class="btn btn-primary">Submit</button>
             </div>
