fixed nav item colors

--- a/MapAppProject/OtterProductions_CapstoneProject/OtterProductions_CapstoneProject/wwwroot/css/profile.css
+++ b/MapAppProject/OtterProductions_CapstoneProject/OtterProductions_CapstoneProject/wwwroot/css/profile.css
@@ -4,11 +4,14 @@ body {
 }
 
 .navbar {
-    color black;
+    color: black;
 }
 
 .nav-item {
     color:white;
+}
+.nav-link {
+    color: white;
 }
 .emp-profile {
     padding: 3%;
