added edit organization button functionality, when pressed will route to edit organization page, where an organization can input information that they want changed based on registering an account

--- a/MapAppProject/OtterProductions_CapstoneProject/OtterProductions_CapstoneProject/Views/Organization/OrganizationDetails.cshtml
+++ b/MapAppProject/OtterProductions_CapstoneProject/OtterProductions_CapstoneProject/Views/Organization/OrganizationDetails.cshtml
@@ -48,7 +48,9 @@
                 </div>
             </div>
             <div class="col-md-2">
-                <input type="submit" class="profile-edit-btn" name="btnAddMore" value="Edit Profile" />
+                  var name = User.Identity.Name;
+                <text class="profile-edit-btn">@Html.ActionLink("Edit Profile", "EditOrganization", "Organization", new { ids = User.Identity.Name }, new { @title = "View Profile" }) </text>
+                @*<input type="submit" class="profile-edit-btn" name="btnAddMore"  value="Edit Profile" />*@
             </div>
         </div>
         <div class="row">
