added a verification message for user if they try to log in and have not verified their account

--- a/MapAppProject/OtterProductions_CapstoneProject/OtterProductions_CapstoneProject/Areas/Identity/Pages/Account/Login.cshtml
+++ b/MapAppProject/OtterProductions_CapstoneProject/OtterProductions_CapstoneProject/Areas/Identity/Pages/Account/Login.cshtml
@@ -16,7 +16,7 @@
             <div class="col-md-4, text-center">
                 <section>
                     <form id="account" method="post">
-                            <hi>@ViewData["verify"]
+                            <hi style="color:red" > @ViewData["verify"]
                             </hi>
                         <br />
                         <hr />
