--- a/MapAppProject/OtterProductions_CapstoneProject/OtterProductions_CapstoneProject/wwwroot/Templates/ConfirmEmailTemplate.html
+++ b/MapAppProject/OtterProductions_CapstoneProject/OtterProductions_CapstoneProject/wwwroot/Templates/ConfirmEmailTemplate.html
@@ -186,7 +186,7 @@
                                                                         <table width="100%" border="0" cellspacing="0" cellpadding="0">
                                                                             <tbody>
                                                                                 <tr>
-                                                                                    <td align="center">Copyright &copy; [year] Quantum Zenith</td>
+                                                                                    <td align="center">Copyright &copy; [year] </td>
                                                                                 </tr>
                                                                                 <!--<p class="footer-received">
                                                                                 You received this email because you have subscribed for the Zenith Money Market Fund
