removed edit for login id for organizations

--- a/MapAppProject/OtterProductions_CapstoneProject/OtterProductions_CapstoneProject/Views/Organization/Index.cshtml
+++ b/MapAppProject/OtterProductions_CapstoneProject/OtterProductions_CapstoneProject/Views/Organization/Index.cshtml
@@ -33,10 +33,7 @@
             <th>
                 @Html.DisplayNameFor(model => model.PhoneNumber)
             </th>
-            <th>
-                @Html.DisplayNameFor(model => model.OrganizationLoginId)
-            </th>
-            <th></th>
+            
         </tr>
     </thead>
     <tbody>
@@ -63,12 +60,10 @@
             <td>
                 @Html.DisplayFor(modelItem => item.PhoneNumber)
             </td>
+            
             <td>
-                @Html.DisplayFor(modelItem => item.OrganizationLoginId)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
+                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> 
+                <a asp-action="Details" asp-route-id="@item.Id">Details</a> 
                 <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
             </td>
         </tr>
