--- a/MapAppProject/OtterProductions_CapstoneProject/OtterProductions_CapstoneProject/wwwroot/css/site.css
+++ b/MapAppProject/OtterProductions_CapstoneProject/OtterProductions_CapstoneProject/wwwroot/css/site.css
@@ -107,6 +107,12 @@ footer {
     width: 100%; /*The width is the width of the web page */
 }
 
+#sharedMap {
+    height: 300px; /*The height is 700 pixels */
+    width: 100%; /*The width is the width of the web page */
+}
+
+
 #sidebar {
     /*display: flex;
     flex-direction: column;*/
