resolved merge conflicts

--- a/MapAppProject/OtterProductions_CapstoneProject/OtterProductions_CapstoneProject/Views/Organization/EditOrganization.cshtml
+++ b/MapAppProject/OtterProductions_CapstoneProject/OtterProductions_CapstoneProject/Views/Organization/EditOrganization.cshtml
@@ -3,6 +3,7 @@
 @{
     ViewData["Title"] = "Edit";
 }
+<link href="~/css/profile.css" rel="stylesheet" />
 <h2> Edit Organization</h2>
 <hr />
 <div class="row">
@@ -53,9 +54,7 @@
     </div>
 </div>
 
-<div>
-    <a asp-action="Index">Back to List</a>
-</div>
+
 
 @section Scripts {
     @{
