--- a/MapAppProject/OtterProductions_CapstoneProject/OtterProductions_CapstoneProject/wwwroot/css/profile.css
+++ b/MapAppProject/OtterProductions_CapstoneProject/OtterProductions_CapstoneProject/wwwroot/css/profile.css
@@ -2,6 +2,12 @@
 body {
     background-color: #15202b
 }
+h2 {
+    color: white;
+}
+.control-label {
+    color: white;
+}
 
 .navbar {
     color: black;
