Updated theme and navbar; fixed issue with reg and login navbar

--- a/MapAppProject/OtterProductions_CapstoneProject/OtterProductions_CapstoneProject/Views/Map/Mappage.cshtml
+++ b/MapAppProject/OtterProductions_CapstoneProject/OtterProductions_CapstoneProject/Views/Map/Mappage.cshtml
@@ -12,12 +12,12 @@
 }
 <body style="background-color: #15202b">
 
-
+    <br />
     <div>
         <p style="color: white;margin-left: 150px;">Type in an Address or City</p>
     </div>
-    <input id="location" type="text" placeholder="@Model.location" style="margin-left: 150px;" value="@Model.location">
-    <input id="submit" type="button" value="Submit" class="btn btn-primary" style="margin-right: 10px;"></>
+    <input id="mapAddressInput" type="text" placeholder="@Model.location" style="margin-left: 150px; color: black;"value="@Model.location">
+    <input id="submitButton" type="button" value="Submit" class="btn btn-primary" style="margin-right: 10px;"></>
         <button type="button" class="btn btn-secondary" id="locationButton">Click here to get your location</button>
     <br />
     <br />
