--- a/MapAppProject/OtterProductions_CapstoneProject/OtterProductions_CapstoneProject/Views/Home/BrowsingSearch.cshtml
+++ b/MapAppProject/OtterProductions_CapstoneProject/OtterProductions_CapstoneProject/Views/Home/BrowsingSearch.cshtml
@@ -5,34 +5,37 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Event Finder</h1>
-    <p>Enter your location and we can find local events in your city</p>
-    <hr />
+<body style="background-color: #15202b">
+    <div class="text-center">
+        <br />
+        <h1 id="titleBrowsing" class="display-4">Event Finder</h1>
+        <p id="infoBrowsing">Enter your location and we can find local events in your city</p>
+        <hr />
 
-    <form asp-controller="Home" asp-action="Browsing" method="post" style="text-align:left; display:inline-block;">
-        <div class="form-group">
-            <br />
-            @*<label for="AddressLocation">Enter your address:</label>
-            <input type="text" id="address" name="Address" value="" required>
-            <br />
-            <br />*@
-            <label for="CityLocation">Enter your city:</label>
-            <input type="text" id="city" name="City" value="" required>
-            <br />
-            <br />
-            <label for="StateLocation">Enter your state (Using state abbrivations):</label>
-            <input type="text" id="state" name="State" pattern="^[A-Z]{2}$" value="" required>
-            @*<br />
-            <br />
-            <label for="Zipcode">Enter your zip:</label>
-            <input type="text" id="zip" name="Zip" value="" required>
-            <br />*@
-        </div>
-        <br>
-        <div class="mb-3">
-            <button type="submit" class="btn btn-primary">Submit</button>
-        </div>
-    </form>
+        <form asp-controller="Home" asp-action="Browsing" method="post" style="text-align:left; display:inline-block;">
+            <div class="form-group">
+                <br />
+                @*<label for="AddressLocation">Enter your address:</label>
+                <input type="text" id="address" name="Address" value="" required>
+                <br />
+                <br />*@
+                <label for="CityLocation" id="cityBrowsingText">Enter your city:</label>
+                <input type="text" id="cityBrowsing" name="City" value="" required>
+                <br />
+                <br />
+                <label for="StateLocation" id="stateBrowsingText">Enter your state (Using state abbreviations):</label>
+                <input type="text" id="stateBrowsing" name="State" pattern="^[A-Z]{2}$" value="" required>
+                @*<br />
+                <br />
+                <label for="Zipcode">Enter your zip:</label>
+                <input type="text" id="zip" name="Zip" value="" required>
+                <br />*@
+            </div>
+            <br>
+            <div class="mb-3">
+                <button id="submitBrowsing" type="submit" class="btn btn-primary">Submit</button>
+            </div>
+        </form>
 
-</div>
+    </div>
+</body>       
