Updated the theme of the pages and added a vertical nav bar

--- a/MapAppProject/OtterProductions_CapstoneProject/OtterProductions_CapstoneProject/Views/Shared/_Layout.cshtml
+++ b/MapAppProject/OtterProductions_CapstoneProject/OtterProductions_CapstoneProject/Views/Shared/_Layout.cshtml
@@ -22,7 +22,7 @@
 </head>
 <body>
     <div class="wrapper">
-        <div class="menu">
+        <div id="navMenu" class="navMenu">
             <ul>
                 <li>
                     <a class="nav-brand" asp-area="" asp-controller="Home" asp-action="Index"><img src="/Images/logo.png" alt="LOGO" style="width: 100px; height: 70px;" /></a>
