--- a/MapAppProject/OtterProductions_CapstoneProject/OtterProductions_CapstoneProject/Views/Home/EventPage.cshtml
+++ b/MapAppProject/OtterProductions_CapstoneProject/OtterProductions_CapstoneProject/Views/Home/EventPage.cshtml
@@ -50,7 +50,7 @@
             <div class="col">
 
                 <div class="text-center">
-                    <h3 id="OrganizationName">This Will be the Organization Name@*@Model.OrganizationName*@</h3>
+                    <h3 id="OrganizationName">This will be the Organization Name@*@Model.OrganizationName*@</h3>
                 </div>
             </div>
             <div class="col"></div>
